# kinder

./: .gitignore  Dockerfile  README.md  generate_token.py  pyproject.toml  requirements.txt
kinder/: __init__.py  __main__.py  auth.py  calibre.py  cleaning.py  cli.py  drive.py  epub.py  models.py  pipeline.py
tests/: test_calibre.py  test_cleaning.py  test_epub.py  test_models.py
