[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinder"
version = "0.1.0"
description = "PDF-to-Kindle converter using Google Drive OCR"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "click>=8.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
kinder = "kinder.cli:convert"

[tool.pytest.ini_options]
testpaths = ["tests"]
